--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -4,6 +4,7 @@
 		"Username" : "Uživatelské jméno",
 		"Password": "Heslo",
 		"Login": "Přihlášení",
+		"Login_to_system": "Přihlášení do systému",
 		"Logout": "Odhlásit",
 		"Registration": "Registrace",
 		"ConfirmPassword": "Potvrďte heslo",
