18:42  29.6.2017 Lokalizace, menší refactor

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -41,6 +41,26 @@
 		"registration_user": "Registrace zaměstnance",
 		"driver": "Řidič",
 		"dispatcher": "Dispečer",
+		"show_hidden_map": "Zobrazit/Skrýt Mapu",
+		"auction": {
+			"add_auction": "Přidat Aukci",
+			"from": "Odkud",
+			"to": "Kam",
+			"price": "Cena",
+			"currency": "Měna",
+			"load_from": "Naložení od",
+			"load_to": "Náložení do",
+			"unload_from": "Vyložení od",
+			"unload_to": "Vyložení do",
+			"freight_description": "Popis zásilky",
+			"freight_type": "Typ zásilky",
+			"freight_size": "Velikost zásilky",
+			"freight_weight": "Váha zásilky",
+			"email_addressee": "Email adresáta",
+			"end_auction": "Konec aukce",
+			"min_amount": "Minimální příhoz",
+			"maturity": "splatnost"
+		},
 		"navigation": {
 			"home": "Domů",
 			"favouriteAuction": "Oblíbené aukce",
