--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -41,6 +41,26 @@
 		"registration_user": "Registration user",
 		"driver": "Driver",
 		"dispatcher": "Dispatcher",
+		"show_hidden_map": "Show/Hide Map",
+		"auction": {
+			"add_auction": "Add Auction",
+			"from": "From",
+			"to": "To",
+			"price": "Price",
+			"currency": "Currency",
+			"load_from": "Load from",
+			"load_to": "Load to",
+			"unload_from": "Unload from",
+			"unload_to": "Unload to",
+			"freight_description": "Freight description",
+			"freight_type": "Freight type",
+			"freight_size": "Freight size",
+			"freight_weight": "Freight weight",
+			"email_addressee": "Email addressee",
+			"end_auction": "End auction",
+			"min_amount": "Min amount",
+			"maturity": "Maturity"
+		},
 		"navigation": {
 			"home": "Home",
 			"favouriteAuction": "Favourite auction",
