--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -4,6 +4,13 @@
 		"login": "Přihlášení",
 		"username": "Uživatelské jméno",
 		"password": "Heslo",
+		"date": "Datum",
+		"amount": "Příhoz",
+		"no_amounts": "Žádné příhozy",
+		"bid": "Přihodit",
+		"want_bid": "Chcete přihodit?",
+		"driver_assign": "Přiřadit řidiče",
+		"assign": "Přiřadit",
 		"login_to_system": "Přihlášení do systému",
 		"registration": "Registrace",
 		"registration_employee": "Registrace zaměstnance",
@@ -39,11 +46,63 @@
 		"vehicle_size": "Velikost vozidla",
 		"add_vehicle": "Nové vozidlo registrováno",
 		"registration_user": "Registrace zaměstnance",
+		"vehicles": "Vozidla",
 		"driver": "Řidič",
+		"drivers": "Řidiči",
 		"dispatcher": "Dispečer",
+		"dispatchers": "Dispečeři",
 		"show_hidden_map": "Zobrazit/Skrýt Mapu",
+		"forgot_password_text": "Pošlete si heslo na email a poté ho změňte v sekci 'Account'.",
+		"send_password": "Poslat heslo",
+		"your_acc": "Váš účet",
+		"actual_password": "Aktuální heslo",
+		"new_password": "Nové heslo",
+		"retype_password": "Znovu zadejte heslo",
+		"change": "Změnit",
+		"change_password": "Změnit heslo",
+		"manage": "Správce",
+		"freight": "Náklad",
+		"my_shipment": "Moje zásilky",
+		"shipment_manage": "Správce zásilek",
+		"auction_for_assign": "Aukce na přiřazení",
+		"about_freight": "O zásilce",
+		"more": "Více",
+		"new_employee": "Nový zaměstnanec",
+		"new_vehicle": "Nové vozidlo",
+		"my_company": "Moje firma",
+		"win_auction": "Vyhrané aukce",
+		"shipment": {
+			"not_started": "Neodstartované",
+			"history": "Historie",
+			"actual": "Aktuální",
+			"no_wait_shipments": "Žádné čekající jízdy...",
+			"no_actual_shipments": "Žádné probíhající jízdy...",
+			"no_ended_shipments": "Žádné ukončené jízdy...",
+			"about_driver": "O řidiči",
+			"driver_name": "Jméno",
+			"driver_surname": "Příjmení",
+			"driver_licence": "Řidičák",
+			"driver_phone_number": "Telefon",
+			"about_vehicle": "O voze",
+			"vehicle_brand": "Značka",
+			"vehicle_capacity": "Nosnost",
+			"vehicle_type": "Typ",
+			"photos": "Fotografie",
+			"photos_before": "Před",
+			"photos_after": "Po",
+			"choose_photos": "Vyberte fotky",
+			"map": "Mapa jízdy",
+			"show_map": "Zobraz mapu jízdy"
+		},
 		"auction": {
+			"auction_list": "Aukce",
+			"bids_auction": "Aukce na které přihazuji",
+			"created_auction": "Vytvořené aukce",
+			"favourite_auction": "Oblíbené aukce",
 			"add_auction": "Přidat Aukci",
+			"detail": "DETAIL",
+			"pickup_places": "Místa vyzvednutí nákladu",
+			"loaded": "Nahráno",
 			"from": "Odkud",
 			"to": "Kam",
 			"price": "Cena",
@@ -59,15 +118,18 @@
 			"email_addressee": "Email adresáta",
 			"end_auction": "Konec aukce",
 			"min_amount": "Minimální příhoz",
-			"maturity": "splatnost"
+			"history_amount": "Historie příhozů",
+			"maturity": "splatnost",
+			"driver": "Řidič",
+			"no_auction": "Žádné dostupné aukce..."
 		},
 		"navigation": {
 			"home": "Domů",
 			"favouriteAuction": "Oblíbené aukce",
 			"createdAuction": "Vytvořené aukce",
 			"bidsAuction": "Aktivní aukce",
-			"winAuction": "Vyhrané aukce",
-			"auctionList": "Aukce",
+			"auction_list": "Aukce",
+			"win_auction": "Vyhrané aukce",
 			"addAuction": "Přidat aukci",
 			"manage": "Správce",
 			"my_company": "My company",
