--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -4,6 +4,13 @@
 		"login": "Login",
 		"username": "Username",
 		"password": "Password",
+		"date": "Date",
+		"amount": "Amount",
+		"no_amounts": "No amounts",
+		"bid": "Bid",
+		"want_bid": "Want bid?",
+		"driver_assign": "Assign driver",
+		"assign": "Assign",
 		"login_to_system": "Login to system",
 		"registration": "Registration",
 		"registration_employee": "Registration employee",
@@ -39,11 +46,63 @@
 		"vehicle_size": "Vehicle size",
 		"add_vehicle": "Vehicle registered",
 		"registration_user": "Registration user",
+		"vehicles": "Vehicles",
 		"driver": "Driver",
+		"drivers": "Drivers",
 		"dispatcher": "Dispatcher",
+		"dispatchers": "Dispatchers",
 		"show_hidden_map": "Show/Hide Map",
+		"forgot_password_text": "Send new password to your email and change him in 'Account' section.",
+		"send_password": "Send password",
+		"your_acc": "Your account",
+		"actual_password": "Actual password",
+		"new_password": "New password",
+		"retype_password": "Retype password",
+		"change": "Change",
+		"change_password": "Change password",
+		"manage": "Manage",
+		"freight": "Freight",
+		"my_shipment": "My shipment",
+		"shipment_manage": "Shipment manage",
+		"auction_for_assign": "Auction for assign",
+		"about_freight": "About freight",
+		"more": "More",
+		"new_employee": "New employee",
+		"new_vehicle": "New vehicle",
+		"my_company": "My company",
+		"win_auction": "Win auction",
+		"shipment": {
+			"not_started": "Not started",
+			"history": "History",
+			"actual": "Actual",
+			"no_wait_shipments": "No wait shipments...",
+			"no_actual_shipments": "No actual shipments...",
+			"no_ended_shipments": "No ended shipments...",
+			"about_driver": "About driver",
+			"driver_name": "Name",
+			"driver_surname": "Surname",
+			"driver_licence": "Driver licence",
+			"driver_phone_number": "Phone number",
+			"about_vehicle": "About vehicle",
+			"vehicle_brand": "Brand",
+			"vehicle_capacity": "Capacity",
+			"vehicle_type": "Type",
+			"photos": "Photos",
+			"photos_before": "Before",
+			"photos_after": "After",
+			"choose_photos": "Choose photos",
+			"map": "Map",
+			"show_map": "Display map"
+		},
 		"auction": {
+			"auction_list": "Auction",
+			"bids_auction": "Bids auction",
+			"created_auction": "Created auction",
+			"favourite_auction": "Favourite auction",
 			"add_auction": "Add Auction",
+			"detail": "DETAIL",
+			"pickup_places": "Pickup places",
+			"loaded": "Loaded",
 			"from": "From",
 			"to": "To",
 			"price": "Price",
@@ -59,15 +118,18 @@
 			"email_addressee": "Email addressee",
 			"end_auction": "End auction",
 			"min_amount": "Min amount",
-			"maturity": "Maturity"
+			"history_amount": "History amount",
+			"maturity": "Maturity",
+			"driver": "Driver",
+			"no_auction": "No auction"
 		},
 		"navigation": {
 			"home": "Home",
 			"favouriteAuction": "Favourite auction",
 			"createdAuction": "Created auction",
 			"bidsAuction": "Active auction",
-			"winAuction": "Win auction",
-			"auctionList": "Auction",
+			"auction_list": "Auction",
+			"win_auction": "Win auction",
 			"addAuction": "Add auction",
 			"manage": "Manage",
 			"my_company": "My company",
