smazani a napojeni na novy api

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -30,8 +30,8 @@
 		"transporter": "Přepravce",
 		"sender": "Odesílatel",
 		"confirmPassword": "Potvrzení hesla",
-		"contact_person_name" : "Kontaktní osoba - Jméno",
-		"contact_person_surname" : "Kontaktní osoba - Příjmení",
+		"person_name" : "Kontaktní osoba - Jméno",
+		"person_surname" : "Kontaktní osoba - Příjmení",
 		"company_name" : "Název firmy",
 		"ico" : "IČO",
 		"dic" : "DIČ",
@@ -42,15 +42,7 @@
 		"psc" : "Poštovní číslo",
 		"phone_number" : "Telefoní číslo",
 		"email" : "Email",
-		"registration_vehicle": "Registrace vozidla",
-		"vehicle_type": "Typ vozidla",
-		"vehicle_brand": "Značka",
-		"vehicle_capacity": "Nosnost",
-		"vehicle_rz": "Registrační značka",
-		"vehicle_size": "Velikost vozidla",
-		"add_vehicle": "Nové vozidlo registrováno",
 		"registration_user": "Registrace zaměstnance",
-		"vehicles": "Vozidla",
 		"driver": "Řidič",
 		"drivers": "Řidiči",
 		"dispatcher": "Dispečer",
@@ -71,26 +63,19 @@
 		"auction_for_assign": "Aukce na přiřazení",
 		"about_freight": "O zásilce",
 		"more": "Více",
-		"new_employee": "Nový zaměstnanec",
-		"new_vehicle": "Nové vozidlo",
-		"my_company": "Moje firma",
+		"add_driver": "Přidat řidiče",
+		"company": "Moje firma",
 		"win_auction": "Vyhrané aukce",
 		"shipment": {
-			"not_started": "Neodstartované",
-			"history": "Historie",
-			"actual": "Aktuální",
-			"no_wait_shipments": "Žádné čekající jízdy...",
-			"no_actual_shipments": "Žádné probíhající jízdy...",
-			"no_ended_shipments": "Žádné ukončené jízdy...",
+			"new": "Nové",
+			"in_progress": "Probíhající",
+			"finished": "Ukončené",
+			"no_shipments": "Žádné zásilky...",
 			"about_driver": "O řidiči",
 			"driver_name": "Jméno",
 			"driver_surname": "Příjmení",
 			"driver_licence": "Řidičák",
 			"driver_phone_number": "Telefon",
-			"about_vehicle": "O voze",
-			"vehicle_brand": "Značka",
-			"vehicle_capacity": "Nosnost",
-			"vehicle_type": "Typ",
 			"photos": "Fotografie",
 			"photos_before": "Před",
 			"photos_after": "Po",
@@ -100,12 +85,28 @@
 			"hide_map": "Skrýt mapu jízdy",
 			"open_invoice": "Otevřít fakturu"
 		},
+		"tab": {
+			"auction": "Aukce",
+			"overview": "Přehled",
+			"add_driver": "Přidat řidiče",
+			"shipments": "Zásilky",
+			"company": "Firma",
+			"list": "Seznam",
+			"favourite": "Oblíbené",
+			"bids": "Přihazuji",
+			"win": "Vyhrané",
+			"new": "Nové",
+			"in_progress": "Probíhající",
+			"finished": "Ukončené",
+			"created": "Vytvořené",
+			"create_auction": "Vytvořit Aukci"
+		},
 		"auction": {
 			"auction_list": "Aukce",
 			"bids_auction": "Aukce na které přihazuji",
 			"created_auction": "Vytvořené aukce",
 			"favourite_auction": "Oblíbené aukce",
-			"add_auction": "Přidat Aukci",
+			"create_auction": "Vytvořit Aukci",
 			"detail": "DETAIL",
 			"pickup_places": "Místa vyzvednutí nákladu",
 			"loaded": "Nahráno",
@@ -113,10 +114,10 @@
 			"to": "Kam",
 			"price": "Cena",
 			"currency": "Měna",
-			"load_from": "Naložení od",
-			"load_to": "Náložení do",
-			"unload_from": "Vyložení od",
-			"unload_to": "Vyložení do",
+			"load": "Naložení",
+			"load_note": "Poznámka pro naložení nákladu",
+			"unload": "Vyložení",
+			"unload_note": "Poznámka pro naložení nákladu",
 			"freight_description": "Popis zásilky",
 			"freight_type": "Typ zásilky",
 			"freight_size": "Velikost zásilky",
@@ -128,25 +129,6 @@
 			"maturity": "splatnost",
 			"driver": "Řidič",
 			"no_auction": "Žádné dostupné aukce..."
-		},
-		"navigation": {
-			"home": "Domů",
-			"favouriteAuction": "Oblíbené aukce",
-			"createdAuction": "Vytvořené aukce",
-			"bidsAuction": "Aktivní aukce",
-			"auction_list": "Aukce",
-			"win_auction": "Vyhrané aukce",
-			"addAuction": "Přidat aukci",
-			"manage": "Správce",
-			"my_company": "My company",
-			"new_employee": "Nový zaměstnanec",
-			"new_vehicle": "Nové vozidlo",
-			"my_auction": "Moje aukce",
-			"my_shipments": "Moje zásilky",
-			"my_profile": "Můj profil",
-			"forgot_password": "Zapomenuté heslo",
-			"registration": "Registrace",
-			"view_shipments": "Sleduj jízdy"
 		}
 	},
 	"errors": {
@@ -154,8 +136,7 @@
 		"wrong_login" : "Chyba při přihlašování",
 		"wrong_registration": "Chyba při registraci",
 		"select_role": "Vyberte roli",
-		"longest_error_35": "XXXXX XXXXX XXXXX XXXXX XXXXX XXXXT",
-		"add_vehicle": "Vozidlo se nepodařilo registrovat"
+		"longest_error_35": "XXXXX XXXXX XXXXX XXXXX XXXXX XXXXT"
 	},
 	"warnings": {
 	},
