--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -30,8 +30,8 @@
 		"transporter": "Transporter",
 		"sender": "Sender",
 		"confirmPassword": "Confirm password",
-		"contact_person_name" : "Contact person - Name",
-		"contact_person_surname" : "Contact person - Surname",
+		"person_name" : "Contact person - Name",
+		"person_surname" : "Contact person - Surname",
 		"company_name" : "Company name",
 		"ico" : "Identification number",
 		"dic" : "VAT",
@@ -42,15 +42,7 @@
 		"psc" : "ZIP",
 		"phone_number" : "Phone number",
 		"email" : "Email",
-		"registration_vehicle": "Registration vehicle",
-		"vehicle_type": "Vehicle type",
-		"vehicle_brand": "Vehicle brand",
-		"vehicle_capacity": "Vehicle capacity",
-		"vehicle_rz": "Vehicle ID",
-		"vehicle_size": "Vehicle size",
-		"add_vehicle": "Vehicle registered",
 		"registration_user": "Registration user",
-		"vehicles": "Vehicles",
 		"driver": "Driver",
 		"drivers": "Drivers",
 		"dispatcher": "Dispatcher",
@@ -71,26 +63,19 @@
 		"auction_for_assign": "Auction for assign",
 		"about_freight": "About freight",
 		"more": "More",
-		"new_employee": "New employee",
-		"new_vehicle": "New vehicle",
-		"my_company": "My company",
+		"add_driver": "Add driver",
+		"company": "My company",
 		"win_auction": "Win auction",
 		"shipment": {
-			"not_started": "Not started",
-			"history": "History",
-			"actual": "Actual",
-			"no_wait_shipments": "No wait shipments...",
-			"no_actual_shipments": "No actual shipments...",
-			"no_ended_shipments": "No ended shipments...",
+			"new": "New",
+			"in_progress": "In progress",
+			"finished": "Finished",
+			"no_shipments": "No shipments...",
 			"about_driver": "About driver",
 			"driver_name": "Name",
 			"driver_surname": "Surname",
 			"driver_licence": "Driver licence",
 			"driver_phone_number": "Phone number",
-			"about_vehicle": "About vehicle",
-			"vehicle_brand": "Brand",
-			"vehicle_capacity": "Capacity",
-			"vehicle_type": "Type",
 			"photos": "Photos",
 			"photos_before": "Before",
 			"photos_after": "After",
@@ -100,12 +85,28 @@
 			"hide_map": "Hide map",
 			"open_invoice": "Open invoice"
 		},
+		"tab": {
+			"auction": "Auction",
+			"overview": "Overview",
+			"add_driver": "Add driver",
+			"shipments": "Shipments",
+			"company": "Company",
+			"list": "List",
+			"favourite": "Favourite",
+			"bids": "Bids",
+			"win": "Win",
+			"new": "New",
+			"in_progress": "In Progress",
+			"finished": "Finished",
+			"created": "Created",
+			"create_auction": "Create Auction"
+		},
 		"auction": {
 			"auction_list": "Auction",
 			"bids_auction": "Bids auction",
 			"created_auction": "Created auction",
 			"favourite_auction": "Favourite auction",
-			"add_auction": "Add Auction",
+			"create_auction": "Create Auction",
 			"detail": "DETAIL",
 			"pickup_places": "Pickup places",
 			"loaded": "Loaded",
@@ -113,10 +114,10 @@
 			"to": "To",
 			"price": "Price",
 			"currency": "Currency",
-			"load_from": "Load from",
-			"load_to": "Load to",
-			"unload_from": "Unload from",
-			"unload_to": "Unload to",
+			"load": "Load",
+			"load_note": "Note for freight load",
+			"unload": "Unload",
+			"unload_note": "Note for freight unload",
 			"freight_description": "Freight description",
 			"freight_type": "Freight type",
 			"freight_size": "Freight size",
@@ -128,25 +129,6 @@
 			"maturity": "Maturity",
 			"driver": "Driver",
 			"no_auction": "No auction"
-		},
-		"navigation": {
-			"home": "Home",
-			"favouriteAuction": "Favourite auction",
-			"createdAuction": "Created auction",
-			"bidsAuction": "Active auction",
-			"auction_list": "Auction",
-			"win_auction": "Win auction",
-			"addAuction": "Add auction",
-			"manage": "Manage",
-			"my_company": "My company",
-			"new_employee": "New employee",
-			"new_vehicle": "New vehicle",
-			"my_auction": "My auction",
-			"my_shipments": "My shipments",
-			"my_profile": "My profile",
-			"forgot_password": "Forgot password",
-			"registration": "Registration",
-			"view_shipments": "View shipments"
 		}
 	},
 	"errors": {
@@ -154,8 +136,7 @@
 		"wrong_login" : "Login error",
 		"wrong_registration": "Registration error",
 		"select_role": "Select role",
-		"longest_error_35": "XXXXX XXXXX XXXXX XXXXX XXXXX XXXXT",
-		"add_vehicle": "Error registration vehicle"
+		"longest_error_35": "XXXXX XXXXX XXXXX XXXXX XXXXX XXXXT"
 	},
 	"warnings": {
 	},
